--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if logged_in? %>
       
 
-      <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
+      <nav class="bg-gray-500 border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900">
         <div class="container flex flex-wrap items-center justify-between mx-auto">
         <a href="/" class="flex items-center">
             <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Home</span>
@@ -45,7 +45,7 @@
         </div>
       </nav>
     <% end %>
-    <main class="min-w-screen min-h-screen bg-gray-500 flex justify-center">
+    <main class="min-w-screen min-h-screen bg-white flex justify-center">
       <%= yield %>
     </main>
   </body>
