CRUD de usuarios terminado y editar sucursal (me lo habia olvidado)

--- a/app/views/branchoffices/home.html.erb
+++ b/app/views/branchoffices/home.html.erb
@@ -43,8 +43,9 @@
             <td class="py-4 px-6">
               <%= branch_office.tel %>
             </td>
-            <td class="py-4 px-6">
-              <%= link_to "Horarios", schedule_view_path(branch_office), class: "inline font-medium text-blue-600 hover:underline"%>
+            <td class="py-4 px-6 flex flex-col">
+              <%= link_to "Horarios", schedule_view_path(branch_office), class: "inline font-medium text-blue-600 hover:underline block"%>
+              <%= link_to "Editar", branchoffice_edit_path(branch_office), class: "inline font-medium text-blue-600 hover:underline block"%>
                <%= button_to "Eliminar", branchoffice_destroy_path(branch_office), method: :delete, class: "inline font-medium text-red-600 hover:underline" %>
             </td>
           </tr>
