--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,20 +1,20 @@
 <%= form_for :user, url: url do|form| %>
     <div class="mb-6">
-            Nombre: <%= form.text_field :username %>
+            Nombre: <%= form.text_field :username, value: user.username %>
     </div>
     <div class="mb-6">
-        Contraseña: <%= form.text_field :password %>
+        Contraseña: <%= form.text_field :password , value: user.password %>
     </div>
     <div data-controller="form-element">
         <%= form.button "Validar", formaction: new_user_path, formmethod: :get, data: {turbo_frame: :branch_office_field, form_element_target: "validate_staff"} %>
         <div class="mb-6">
-            Rol: <%= form.select :role, User.roles,{include_blank: true}, {data: {action: "change->form-element#remoteValidate"}} %>
+            Rol: <%= form.select :role, User.roles,{include_blank: true , selected: user.role}, {data: {action: "change->form-element#remoteValidate"}}%>
         </div>
     </div>
     <%= turbo_frame_tag :branch_office_field do %>
         <% if user.staff? %>
             <div class="mb-6">
-                Sucursal: <%= form.text_field :branch_office %>
+                Sucursal: <%= select_tag :branch_office, options_from_collection_for_select(@branch_offices, "id", "name"), {inlude_blanck: true} %>
             </div>
         <% end %>
     <% end %>
