--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,14 +39,14 @@
             </td>
             <td class="py-4 px-6">
                 <% if @user.branch_office_id? %>
-                    <%= @user.branch_office %>
+                    <%= @user.branch_office.name %> ( <%= @user.branch_office.direc %> )
                 <% else %>
                     <span>No trabaja en ninguna Sucursal</span>
                 <% end %>
             </td>
             <td class="py-4 px-6">
               <%= link_to "Editar", user_edit_path(@user), class: "inline font-medium text-blue-600 hover:underline"%>
-              <%= button_to "Eliminar", user_destroy_path(@user), class: "inline font-medium text-red-600 hover:underline"%>
+              <%= button_to "Eliminar", user_destroy_path(@user),method: :delete, class: "inline font-medium text-red-600 hover:underline"%>
             </td>
           </tr>  
       </tbody>
