Sistema de turnos terminado

--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,4 +1,4 @@
-<div class="block h-[36rem] w-86 p-6 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700 my-12">
+<div class="block h-fit w-86 p-6 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700 my-12">
     <h2 class="text-3xl mb-6"> Horarios de la Sucursal </h2>
     <%= params[:format] %>
      <%= render "schedules/form", schedule: @schedule , url: "/schedule/create" %>
