--- a/app/views/turns/_form.html.erb
+++ b/app/views/turns/_form.html.erb
@@ -1,13 +1,22 @@
 <%= form_for :turn, url: url do|form| %>
     <div class="mb-6">
+        Sucursal: <%= select_tag :branch_office, options_from_collection_for_select(@branch_offices, "id", "name"), {inlude_blanck: true} %>
+    </div>
+    <div class="mb-6">
         Dia: <%= form.date_field :date, value: turn.date %>
     </div>
-    <div class="mb-6">
-        Hora: <%= form.time_field :hour , value: turn.hour %>
-    </div>
+    <% if url == "/turns/#{turn.id}/update" %>
+        <div class="mb-6">
+            Hora: <%= form.time_field :hour , value: turn.hour.strftime("%R") %>
+        </div>
+    <% else %>
+        <div class="mb-6">
+            Hora: <%= form.time_field :hour , value: turn.hour %>
+        </div>
+    <% end %>
     <%= form.hidden_field :state, value: 0 %>
     <div class="mb-6">
-        Razon: <%= form.time_field :reason , value: turn.reason %>
+        Razon: <%= form.text_field :reason , value: turn.reason %>
     </div>
     <div class="flex justify-center mt-10">
         <%= form.submit "Crear Turno", data: { confirm: "Seguro que quiere modificar su contraseña?" },class:"text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" %>
