--- a/app/views/branchoffices/home.html.erb
+++ b/app/views/branchoffices/home.html.erb
@@ -1,17 +1,19 @@
 <div class="p-10">
   <% flash.each do |type, msg| %>
     <% if type == "alert"%>
-    <div class="flex justify-center text-red-700 font-bold text-xl">
+    <div class="flex justify-center text-red-700 font-bold text-xl p-3">
         <%= msg %>
     </div>
     <% else %>
-        <div class="flex justify-center text-green-700 font-bold text-xl">
+        <div class="flex justify-center text-green-700 font-bold text-xl p-3">
             <%= msg %>
         </div>
     <% end %>
   <% end %>
 
-  <%= link_to "Crear Sucursal",branchoffice_new_path , class:"text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"%>
+  <% if current_user.admin? %>
+    <%= link_to "Crear Sucursal",branchoffice_new_path , class:"text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"%>
+  <% end %>
 
   <div class="overflow-x-auto relative shadow-md sm:rounded-lg my-8">
     <table class="w-full text-sm text-left text-gray-500">
@@ -32,21 +34,23 @@
         </tr>
       </thead>
       <tbody>
-        <% @branch_offices.each do |branch_office| %>
+        <% @branch_offices.each do |branchOffice| %>
           <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
             <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-              <%= branch_office.name %>
+              <%= branchOffice.name %>
             </th>
             <td class="py-4 px-6">
-              <%= branch_office.direc %>
+              <%= branchOffice.direc %>
             </td>
             <td class="py-4 px-6">
-              <%= branch_office.tel %>
+              <%= branchOffice.tel %>
             </td>
             <td class="py-4 px-6 flex flex-col">
-              <%= link_to "Horarios", schedule_view_path(branch_office), class: "inline font-medium text-blue-600 hover:underline block"%>
-              <%= link_to "Editar", branchoffice_edit_path(branch_office), class: "inline font-medium text-blue-600 hover:underline block"%>
-               <%= button_to "Eliminar", branchoffice_destroy_path(branch_office), method: :delete, class: "inline font-medium text-red-600 hover:underline" %>
+              <%= link_to "Horarios", schedule_view_path(branchOffice), class: "inline font-medium text-blue-600 hover:underline block"%>
+              <% if current_user.admin? %>
+                <%= link_to "Editar", branchoffice_edit_path(branchOffice), class: "inline font-medium text-blue-600 hover:underline block"%>
+                <%= button_to "Eliminar", branchoffice_destroy_path(branchOffice), method: :delete, class: "inline font-medium text-red-600 hover:underline" %>
+               <% end %>
             </td>
           </tr>
         <% end %>      
