--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -10,8 +10,9 @@
         </div>
     <% end %>
   <% end %>
-
-  <%= link_to "Crear Usuario",new_user_path , class:"text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"%>
+  <% if current_user.admin? %>
+    <%= link_to "Crear Usuario",new_user_path , class:"text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"%>
+  <% end %>
 
   <div class="overflow-x-auto relative shadow-md sm:rounded-lg my-8">
     <table class="w-full text-sm text-left text-gray-500">
