--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="block h-fit w-86 p-6 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700 my-12">
     <h2 class="text-center text-3xl mb-6"> Horarios de la Sucursal </h2>
-    <%= render "schedules/form", schedule: @old_schedule , url: "/schedule/update" %>
+    <%= render "schedules/form", schedule: @old_schedule , url: "/schedule/#{@old_schedule.id}/update" %>
     <% flash.each do |type, msg| %>
         <% if type == "alert"%>
         <div class="flex justify-center text-red-700 font-bold text-xl">
